@@ -1,3 +1,7 @@
+* Fri May 29 2020 Steven Pritchard <steven.pritchard@onyxpoint.com> - 3.1.0-0
+- Support confinement in profiles, controls, and ces (as well as checks)
+- Add rspec tests for compliance_markup::enforcement
+
 * Mon Apr 13 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 3.1.0-0
 - Add EL8 support
 - Ensure that the Hiera backend recurses as little as possible to improve
@@ -9,7 +13,6 @@
 * Fri Apr 10 2020 Steven Pritchard <steven.pritchard@onyxpoint.com> - 3.1.0-0
 - Support arrays of potential matches in confinement blocks
 - Support structured facts in confinement
-
 
 * Wed Aug 21 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 3.0.2-0
 - Update confinement logic to ensure that all possibilities are collected
